K1J-1437: nullcheck when updating entities